@@ -1,3 +1,8 @@
+2020-02-12  Dirk Eddelbuettel  <edd@debian.org>
+
+	* DESCRIPTION (Version, Date): Roll minor version
+        * inst/include/Rcpp/config.h: Idem
+
 2020-02-09  Joshua Pritikin  <jpritikin@pobox.com>
 
 	* inst/include/Rcpp.h: Include exceptions_impl.h
